# lumo

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  linux.yml  macos.yml  release.yml  windows.yml
scripts/: apply_runtime_libs.mjs  bundle_dmg_macos.sh  bundle_runtime_libs_linux.mjs  bundle_runtime_libs_macos.sh  bundle_runtime_libs_windows.mjs  check_playback_navigation.mjs  linuxdeploy-plugin-gtk.sh  prepare_tauri_linuxdeploy_plugin_gtk.mjs  run_tauri.mjs  runtime_libs_release_config.env  setup_runtime_libs.mjs  setup_runtime_libs_android.mjs  setup_runtime_libs_linux.sh  setup_runtime_libs_macos.sh  setup_runtime_libs_windows.mjs  sync_media_extensions.mjs  sync_runtime_libs.mjs  sync_version.mjs
src/: App.vue  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/resources/shaders/: NOTICE.md
src-tauri/src/: app_bootstrap.rs  check_update.rs  contact_sheet.rs  lib.rs  main.rs  media_extensions.rs  online_subtitles.rs  playback_source.rs  remote_control.rs  scenes.rs  subtitles.rs
src-tauri/src/commands/: mod.rs  network.rs  now_playing.rs  persistence.rs  platform.rs  playback.rs  window.rs
src-tauri/src/mpv/: encode.rs  event_loop.rs  ffi.rs  handle.rs  mod.rs  resolve_with_ytdlp.rs  stream_https.rs  stream_proxy.rs  thumbnails.rs  ytdlp_resolver.rs  ytdlp_settings.rs
src-tauri/src/network/: mod.rs  proxy.rs  service.rs  types.rs  webdav_client.rs
src-tauri/src/network/protocols/: dlna.rs  mod.rs  smb.rs  webdav.rs
src-tauri/src/platform/: default.rs  macos.rs  macos_ffi.rs  mod.rs  windows.rs
src-tauri/src/playback_source/: adjacency.rs  display.rs  key.rs  mod.rs  resolve.rs
src-tauri/src/store/: installation_store.rs  json_io.rs  media_db.rs  mod.rs  network_connection_store.rs  play_history.rs  playback_db.rs  playback_store.rs  storage_paths.rs  ui_state_store.rs
src-tauri/windows/: hooks.nsh
src/components/: ClipBar.vue  CommandPalette.vue  ConfirmDialog.vue  ContextMenu.vue  CurvesPanel.vue  (+17 more)
(+123 files in other folders)
